# rust-lib-template

./: Cargo.toml  README.md
.github/workflows/: build.yml
