[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["xingxiaoli <xingxiaoli@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/laizhenxing/"
homepage = "https://github.com/laizhenxing/"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
